WEB SCRAPING YAAAAAYYY!
TODO: Extract The TExt that needs decrypting